gitops-main/base/infrastructure/mongodb/allow-ingress-from-mongo-express.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-mongo-express
  namespace: mongodb
spec:
  podSelector:
    matchLabels: 
      app: mongodb
  policyTypes:
  - Ingress

  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: mongo-express
        podSelector:
          matchLabels:
            app.kubernetes.io/name: mongo-express
      ports:
        - protocol: TCP
          port: 27017
